# AceMagic-S1-LED-TFT-Linux

./: .gitignore  Dockerfile  README.md  entrypoint.sh  hypercorn_conf.py  pyproject.toml  requirements.txt
.github/workflows/: full-workflow.yaml  release-workflow.yaml
acemagic_s1/: main.py
python/: crlcd03.py  lcddsp.py  ledsrl.py
